# goemotions-classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
app/: __init__.py  streamlit_app.py
models/tfidf_baseline/: classifier.joblib  metadata.json  vectorizer.joblib
notebooks/: notebook.ipynb
src/: __init__.py  constants.py  data.py  utils.py
src/predict/: __init__.py  predict.py
src/train/: __init__.py  train.py
