[project]
name = "goemotions-classifier"
version = "0.1.0"
description = "Multi-label emotion classification on the GoEmotions dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0,<2.3.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "wordcloud>=1.9.0",
    "joblib>=1.3.0",
    "tqdm>=4.65.0",
    "accelerate>=1.1.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "nbformat>=5.9.0",
    "requests>=2.32.5",
]
